Spezifische SQL Query

--- a/model.ipynb
+++ b/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lade den Datensatz aus DB\n",
-    "SQLquery = text('SELECT * FROM ' + config.db_weather_history + ' AS w JOIN ' + config.db_AQI_history + ' AS aqi ON w.\"datetime\" = aqi.\"Datum\"')\n",
+    "#SQLquery = text('SELECT * FROM ' + config.db_weather_history + ' AS w JOIN ' + config.db_AQI_history + ' AS aqi ON w.\"datetime\" = aqi.\"Datum\"')\n",
+    "SQLquery = text('SELECT \"Wert\", \"precipprob\", \"windgust\", \"visibility\" FROM ' + config.db_weather_history + ' AS w JOIN ' + config.db_AQI_history + ' AS aqi ON w.\"datetime\" = aqi.\"Datum\"')\n",
     "data = pd.read_sql(SQLquery, con=config.db_login.connect())\n",
     "\n",
     "# Entferne Datensätze mit leeren Werten in den angegebenen Spalten\n",
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -124,26 +125,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "3018/3018 [==============================] - 8s 3ms/step - loss: 121.0031\n",
+      "1208/1208 [==============================] - 4s 3ms/step - loss: 158.6436\n",
       "Epoch 2/10\n",
-      "3018/3018 [==============================] - 7s 2ms/step - loss: 92.1253\n",
+      "1208/1208 [==============================] - 3s 2ms/step - loss: 96.7429\n",
       "Epoch 3/10\n",
-      "3018/3018 [==============================] - 7s 2ms/step - loss: 91.1089\n",
+      "1208/1208 [==============================] - 3s 2ms/step - loss: 92.6041\n",
       "Epoch 4/10\n",
-      "3018/3018 [==============================] - 7s 2ms/step - loss: 90.3906\n",
+      "1208/1208 [==============================] - 3s 2ms/step - loss: 91.3894\n",
       "Epoch 5/10\n",
-      "3018/3018 [==============================] - 7s 2ms/step - loss: 89.6880\n",
+      "1208/1208 [==============================] - 3s 2ms/step - loss: 91.3181\n",
       "Epoch 6/10\n",
-      "3018/3018 [==============================] - 7s 2ms/step - loss: 89.1373\n",
+      "1208/1208 [==============================] - 3s 2ms/step - loss: 90.7851\n",
       "Epoch 7/10\n",
-      "3018/3018 [==============================] - 7s 2ms/step - loss: 88.8700\n",
+      "1208/1208 [==============================] - 2s 2ms/step - loss: 90.7301\n",
       "Epoch 8/10\n",
-      "3018/3018 [==============================] - 10s 3ms/step - loss: 88.4752\n",
+      "1208/1208 [==============================] - 3s 2ms/step - loss: 90.1917\n",
       "Epoch 9/10\n",
-      "3018/3018 [==============================] - 12s 4ms/step - loss: 88.2958\n",
+      "1208/1208 [==============================] - 3s 3ms/step - loss: 89.6463\n",
       "Epoch 10/10\n",
-      "3018/3018 [==============================] - 10s 3ms/step - loss: 88.0897\n",
-      "755/755 [==============================] - 1s 2ms/step\n"
+      "1208/1208 [==============================] - 3s 3ms/step - loss: 89.5420\n",
+      "302/302 [==============================] - 1s 2ms/step\n"
      ]
     }
    ],
@@ -169,36 +170,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lineare Regression RMSE: 10.585922168900106\n",
-      "Linear Regression Mean Absolute Error (MAE): 7.474681128697551\n",
-      "Linear Regression Mean Squared Error (MSE): 112.06174816601073\n",
-      "Linear Regression R^2 Score: 0.27852461639661275\n",
-      "Linear Regression Explained Variance Score: 0.2785247552922785\n",
+      "Lineare Regression RMSE: 10.759961678139554\n",
+      "Linear Regression Mean Absolute Error (MAE): 7.5502604510991675\n",
+      "Linear Regression Mean Squared Error (MSE): 115.77677531503178\n",
+      "Linear Regression R^2 Score: 0.27531646432243184\n",
+      "Linear Regression Explained Variance Score: 0.27605018587412244\n",
       "-------\n",
-      "Decision Tree RMSE: 1.7183659812628398\n",
-      "Decision Tree Mean Absolute Error (MAE): 0.44076340028854644\n",
-      "Decision Tree Mean Squared Error (MSE): 2.9527816455614024\n",
-      "Decision Tree R^2 Score: 0.9809894160559365\n",
-      "Decision Tree Explained Variance Score: 0.9809905188590257\n",
+      "Decision Tree RMSE: 1.805886161886597\n",
+      "Decision Tree Mean Absolute Error (MAE): 0.45638830741911884\n",
+      "Decision Tree Mean Squared Error (MSE): 3.261224829693504\n",
+      "Decision Tree R^2 Score: 0.9795869600462528\n",
+      "Decision Tree Explained Variance Score: 0.9795872134164955\n",
       "-------\n",
-      "Random Forest RMSE: 1.7199321347021936\n",
-      "Random Forest Mean Absolute Error (MAE): 0.4409083188802661\n",
-      "Random Forest Mean Squared Error (MSE): 2.9581665479812447\n",
-      "Random Forest R^2 Score: 0.980954747004252\n",
-      "Random Forest Explained Variance Score: 0.980955861705433\n",
+      "Random Forest RMSE: 1.811624074401448\n",
+      "Random Forest Mean Absolute Error (MAE): 0.5045562775178334\n",
+      "Random Forest Mean Squared Error (MSE): 3.281981786950903\n",
+      "Random Forest R^2 Score: 0.9794570356712279\n",
+      "Random Forest Explained Variance Score: 0.9794574171589946\n",
       "-------\n",
-      "Neuronal Network RMSE: 9.321453684212843\n",
-      "Neuronal Network Mean Absolute Error (MAE): 6.638284986911822\n",
-      "Neuronal Network Mean Squared Error (MSE): 86.88949878692517\n",
-      "Neuronal Network R^2 Score: 0.4405884657846443\n",
-      "Neuronal Network Explained Variance Score: 0.44095183897430634\n"
+      "Neuronal Network RMSE: 9.540618261069623\n",
+      "Neuronal Network Mean Absolute Error (MAE): 6.846510995002631\n",
+      "Neuronal Network Mean Squared Error (MSE): 91.02339680345516\n",
+      "Neuronal Network R^2 Score: 0.4302557067648276\n",
+      "Neuronal Network Explained Variance Score: 0.4303475209681127\n"
      ]
     }
    ],
@@ -292,27 +293,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Tatsächlicher Wert  Vorhersage\n",
-      "78030                26.88   26.880000\n",
-      "136185               11.47   11.470000\n",
-      "71079                34.32   34.320000\n",
-      "126118               17.99   17.990000\n",
-      "45701                 4.10    4.100000\n",
-      "...                    ...         ...\n",
-      "60733                43.02   43.020000\n",
-      "6807                 18.82   18.820000\n",
-      "72003                17.98   17.980000\n",
-      "103481               10.58   12.675484\n",
-      "128225               14.89   14.890000\n",
+      "       Tatsächlicher Wert  Vorhersage\n",
+      "44825               21.52   21.520000\n",
+      "63379               23.38   23.380000\n",
+      "56823                4.89   10.551176\n",
+      "59105               17.05   17.050000\n",
+      "59416               20.81   20.810000\n",
+      "...                   ...         ...\n",
+      "11841               55.88   55.880000\n",
+      "54484               18.19   18.190000\n",
+      "4427                22.11   22.110000\n",
+      "20354               77.72   77.720000\n",
+      "54869                9.57    9.570000\n",
       "\n",
-      "[24144 rows x 2 columns]\n"
+      "[9658 rows x 2 columns]\n"
      ]
     }
    ],
@@ -333,28 +334,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        precipprob  windgust  visibility\n",
-      "78030            0      16.7         8.8\n",
-      "136185         100      73.5         9.3\n",
-      "71079            0      19.4         4.4\n",
-      "126118           0      20.9        32.5\n",
-      "45701          100      28.0         9.4\n",
-      "...            ...       ...         ...\n",
-      "60733            0      10.4        28.1\n",
-      "6807             0      24.7        22.8\n",
-      "72003            0      16.5        12.9\n",
-      "103481           0      33.5        10.0\n",
-      "128225         100      26.6        23.8\n",
+      "       precipprob  windgust  visibility\n",
+      "44825         100      64.8        21.4\n",
+      "63379         100      32.9        10.0\n",
+      "56823         100      39.6        10.0\n",
+      "59105         100      38.9        13.4\n",
+      "59416         100      40.9        12.9\n",
+      "...           ...       ...         ...\n",
+      "11841         100      22.1         5.1\n",
+      "54484         100      35.8        10.0\n",
+      "4427          100      38.1         6.9\n",
+      "20354           0      14.6         5.6\n",
+      "54869         100      45.2        30.0\n",
       "\n",
-      "[24144 rows x 3 columns]\n",
-      "[26.88 11.47 34.32 ... 17.98 12.61 14.89]\n"
+      "[9658 rows x 3 columns]\n",
+      "[21.52       23.38       10.55117647 ... 22.11       77.72\n",
+      "  9.57      ]\n"
      ]
     }
    ],
