--- a/model.ipynb
+++ b/model.ipynb
@@ -170,41 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lineare Regression RMSE: 10.759961678139554\n",
-      "Linear Regression Mean Absolute Error (MAE): 7.5502604510991675\n",
-      "Linear Regression Mean Squared Error (MSE): 115.77677531503178\n",
-      "Linear Regression R^2 Score: 0.27531646432243184\n",
-      "Linear Regression Explained Variance Score: 0.27605018587412244\n",
-      "-------\n",
-      "Decision Tree RMSE: 1.805886161886597\n",
-      "Decision Tree Mean Absolute Error (MAE): 0.45638830741911884\n",
-      "Decision Tree Mean Squared Error (MSE): 3.261224829693504\n",
-      "Decision Tree R^2 Score: 0.9795869600462528\n",
-      "Decision Tree Explained Variance Score: 0.9795872134164955\n",
-      "-------\n",
-      "Random Forest RMSE: 1.811624074401448\n",
-      "Random Forest Mean Absolute Error (MAE): 0.5045562775178334\n",
-      "Random Forest Mean Squared Error (MSE): 3.281981786950903\n",
-      "Random Forest R^2 Score: 0.9794570356712279\n",
-      "Random Forest Explained Variance Score: 0.9794574171589946\n",
-      "-------\n",
-      "Neuronal Network RMSE: 9.540618261069623\n",
-      "Neuronal Network Mean Absolute Error (MAE): 6.846510995002631\n",
-      "Neuronal Network Mean Squared Error (MSE): 91.02339680345516\n",
-      "Neuronal Network R^2 Score: 0.4302557067648276\n",
-      "Neuronal Network Explained Variance Score: 0.4303475209681127\n"
+     "ename": "NameError",
+     "evalue": "name 'mean_squared_error' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Linear Regression \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m linear_rmse \u001b[39m=\u001b[39m mean_squared_error(y_test, linear_predictions, squared\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mLineare Regression RMSE:\u001b[39m\u001b[39m\"\u001b[39m, linear_rmse)\n\u001b[0;32m      5\u001b[0m \u001b[39m# Mean Absolute Error (MAE)\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mean_squared_error' is not defined"
      ]
     }
    ],
    "source": [
-    "# Linear Regression \n",
+    "# Linear Regression\n",
+    "# Root Mean Square Error (RMSE) \n",
     "linear_rmse = mean_squared_error(y_test, linear_predictions, squared=False)\n",
     "print(\"Lineare Regression RMSE:\", linear_rmse)\n",
     "\n",
@@ -227,6 +210,7 @@
     "# ------\n",
     "print(\"-------\")\n",
     "# Decision Tree\n",
+    "# Root Mean Square Error (RMSE)\n",
     "tree_rmse = mean_squared_error(y_test, tree_predictions, squared=False)\n",
     "print(\"Decision Tree RMSE:\", tree_rmse)\n",
     "\n",
@@ -249,6 +233,7 @@
     "# ------\n",
     "print(\"-------\")\n",
     "# Random Forest \n",
+    "# Root Mean Square Error (RMSE)\n",
     "forest_rmse = mean_squared_error(y_test, forest_predictions, squared=False)\n",
     "print(\"Random Forest RMSE:\", forest_rmse)\n",
     "\n",
@@ -271,6 +256,7 @@
     "# ------\n",
     "print(\"-------\")\n",
     "# Neuronal Network \n",
+    "# Root Mean Square Error (RMSE)\n",
     "nn_rmse = mean_squared_error(y_test, nn_predictions, squared=False)\n",
     "print(\"Neuronal Network RMSE:\", nn_rmse)\n",
     "\n",
